# mcp-deep-video

./: .env.example  .gitignore  .mcp.json.example  README.md  pyproject.toml
doc/: example_claude_code.md  example_use_cases.md  tool_index.md
examples/workout-judge/: README.md  pyproject.toml
examples/workout-judge-mcp/: README.md  pyproject.toml
examples/workout-judge-mcp/src/workout_judge_mcp/: __init__.py  agent.py  main.py
examples/workout-judge/src/workout_judge/: __init__.py  agent.py  main.py  models.py
